hphp/test/slow/class-ptr/classname-to-class-backdoor-bad.php.expectf
Fatal error: classname_to_class() expects exactly 1 positional parameter, 2 given in %s/class-ptr/classname-to-class-backdoor-bad.php on line 5
